# sion

./: .gitignore  LICENSE  README.md
sion/: Cargo.toml  rust-toolchain.toml
sion/benches/: benchmark.rs
sion/proptest-regressions/maxx_sim/: dem_buffer.txt
sion/src/: bitmap.rs  consts.rs  dem_tile.rs  errors.rs  geo.rs  grayscale8_bitmap.rs  grayscale_bitmap.rs  igor_hillshading.rs  lib.rs  main.rs  mono_bitmap.rs  proj.rs  raster16.rs  slopes.rs  testing.rs  trig.rs
sion/src/hillshading/: igor_hillshading.rs  igor_hillshading_new.rs  igor_hillshading_opt1.rs  igor_hillshading_orig.rs  lookup_tables_experiment.rs  mod.rs  parameters.rs  some_experimental_calculations.rs  xas_experiment.rs
sion/src/maxx_sim/: cell_key.rs  dem_buffer.rs  mod.rs  types.rs
sion/src/water_bodies/: caching.rs  command.rs  dem_tile_id.rs  mod.rs  water_bodies.rs  worldcover.rs
sion/tests/: icebreaker.rs
