[package]
name = "sion"
version = "0.1.0"
edition = "2021"
rust-version = "1.72.0"

[lib]
name = "sion"

[[bin]]
name = "sion"
path = "src/main.rs"

[dependencies]
byteorder = "1.5.0"
image = "0.25.2"
reqwest = { version = "0.12.15", features = ["blocking"] }

[dev-dependencies]
rstest = "0.25.0"
criterion = "0.5.1"

[[bench]]
name = "benchmark"
harness = false