[package]
name = "sion"
version = "0.1.0"
edition = "2021"
rust-version = "1.72.0"

[lib]
name = "sion"

[[bin]]
name = "sion"
path = "src/main.rs"

[dependencies]
byteorder = "1.5.0"
flate2 = "1.1.1"
image = "0.25.2"
reqwest = { version = "0.12.15", features = ["blocking"] }
serde_json = "1.0.125"
tiff = "0.9.1"
dotenv = "0.15.0"
criterion = "0.5.1"

[dev-dependencies]
rstest = "0.25.0"

[[bench]]
name = "benchmark"
harness = false
